--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,14 @@ dependencies {
     compile 'com.vk:androidsdk:1.6.5'
     compile 'com.google.android.gms:play-services-auth:9.4.0'
 
+    //design
+    compile('com.mikepenz:materialdrawer:5.6.0@aar') {
+        transitive = true
+    }
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.aryarohit07:picasso-facedetection-transformation:0.3.0'
+
 }
 repositories {
     mavenCentral()
