--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,10 @@ kapt {
     generateStubs = true
 }
 
+repositories {
+    mavenCentral()
+    maven { url "https://jitpack.io" }
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -63,7 +67,6 @@ dependencies {
     //kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.pawegio.kandroid:kandroid:0.6.12@aar'
-
 
     //conductor
     compile 'com.bluelinelabs:conductor:2.0.2'
@@ -82,9 +85,9 @@ dependencies {
     compile "com.andkulikov:transitionseverywhere:1.6.9"
 
     //firebase
-    compile 'com.google.firebase:firebase-auth:9.4.0'
-    compile 'com.google.firebase:firebase-database:9.4.0'
-    compile 'com.google.firebase:firebase-storage:9.4.0'
+    compile 'com.google.firebase:firebase-auth:9.6.1'
+    compile 'com.google.firebase:firebase-database:9.6.1'
+    compile 'com.google.firebase:firebase-storage:9.6.1'
     compile 'com.kelvinapps:rxfirebase:0.0.15'
 
     //dagger
@@ -96,23 +99,22 @@ dependencies {
     compile 'com.vk:androidsdk:1.6.5'
 
     //play services
-    compile "com.google.android.gms:play-services-places:9.4.0"
-    compile "com.google.android.gms:play-services-maps:9.4.0"
-    compile 'com.google.android.gms:play-services-auth:9.4.0'
+    compile "com.google.android.gms:play-services-places:9.6.1"
+    compile "com.google.android.gms:play-services-maps:9.6.1"
+    compile 'com.google.android.gms:play-services-auth:9.6.1'
 
     //design
     compile('com.mikepenz:materialdrawer:5.6.0@aar') {
         transitive = true
     }
+    compile 'com.github.rubensousa:BottomSheetBuilder:1.3'
 
+    //utils
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.aryarohit07:picasso-facedetection-transformation:0.3.0'
-
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar'
     compile 'com.github.zellius:rxlocationmanager.kotlin:0.1.0'
-}
-repositories {
-    mavenCentral()
+    compile 'com.github.oliveiradev:RxPhoto:0.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
