--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,6 +115,7 @@ dependencies {
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar'
     compile 'com.github.zellius:rxlocationmanager.kotlin:0.1.0'
     compile 'com.github.oliveiradev:RxPhoto:0.1.0'
+    compile 'com.rohit.recycleritemclicksupport:recycleritemclicksupport:1.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
