--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,13 +108,15 @@ dependencies {
         transitive = true
     }
     compile 'com.github.rubensousa:BottomSheetBuilder:1.3'
+    compile 'com.facebook.fresco:fresco:0.14.0'
+    compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
 
     //utils
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.aryarohit07:picasso-facedetection-transformation:0.3.0'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar'
     compile 'com.github.zellius:rxlocationmanager.kotlin:0.1.0'
-    compile 'com.github.oliveiradev:RxPhoto:0.1.0'
+    compile 'com.mlsdev.rximagepicker:library:1.3.1'
     compile 'com.rohit.recycleritemclicksupport:recycleritemclicksupport:1.0.1'
 }
 
