--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,11 @@ dependencies {
     compile 'com.trello:rxlifecycle:0.7.0'
     compile 'io.reactivex:rxkotlin:0.60.0'
 
+    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+    compile 'com.jakewharton.rxbinding:rxbinding-support-v4:0.4.0'
+    compile 'com.jakewharton.rxbinding:rxbinding-appcompat-v7:0.4.0'
+    compile 'com.jakewharton.rxbinding:rxbinding-design:0.4.0'
+
     //animations
     compile "com.andkulikov:transitionseverywhere:1.6.9"
 
