--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
+    compile 'com.android.support:palette-v7:24.2.1'
 
     //kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -123,6 +125,7 @@ dependencies {
     compile 'com.github.zellius:rxlocationmanager.kotlin:0.1.0'
     compile 'com.mlsdev.rximagepicker:library:1.3.1'
     compile 'com.rohit.recycleritemclicksupport:recycleritemclicksupport:1.0.1'
+    compile 'com.android.support:support-v4:24.2.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
