--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,6 +117,9 @@ dependencies {
     compile 'com.github.rubensousa:BottomSheetBuilder:1.3'
     compile 'com.facebook.fresco:fresco:0.14.0'
     compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
+    compile 'com.github.ybq:parallaxviewpager:2.0.0'
+    compile 'com.eftimoff:android-viewpager-transformers:1.0.1@aar'
+    compile 'com.pacioianu.david:ink-page-indicator:1.2.0'
 
     //utils
     compile 'com.squareup.picasso:picasso:2.5.2'
