--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,6 +117,7 @@ dependencies {
     compile 'com.github.ybq:parallaxviewpager:2.0.0'
     compile 'com.eftimoff:android-viewpager-transformers:1.0.1@aar'
     compile 'com.pacioianu.david:ink-page-indicator:1.2.0'
+    compile 'com.github.ahmadmuzakki29:subtitle-collapsingtoolbar:fcfa0102d0'
 
     //utils
     compile 'com.squareup.picasso:picasso:2.5.2'
