--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,12 +13,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion "24.0.2"
     defaultConfig {
         applicationId "com.popalay.spotty"
         minSdkVersion 21
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -56,16 +56,20 @@ repositories {
     maven { url "https://jitpack.io" }
     jcenter()
 }
+
+ext.support_version = '25.0.0'
+ext.play_services_version = '9.8.0'
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
-    compile 'com.android.support:palette-v7:24.2.1'
+    compile "com.android.support:appcompat-v7:$support_version"
+    compile "com.android.support:design:$support_version"
+    compile "com.android.support:cardview-v7:$support_version"
+    compile "com.android.support:recyclerview-v7:$support_version"
+    compile "com.android.support:palette-v7:$support_version"
+    compile "com.android.support:support-v4:$support_version"
 
     //kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -93,10 +97,10 @@ dependencies {
     compile "com.andkulikov:transitionseverywhere:1.6.9"
 
     //firebase
-    compile 'com.google.firebase:firebase-auth:9.6.1'
-    compile 'com.google.firebase:firebase-database:9.6.1'
-    compile 'com.google.firebase:firebase-storage:9.6.1'
-    compile 'com.kelvinapps:rxfirebase:0.0.15'
+    compile "com.google.firebase:firebase-auth:$play_services_version"
+    compile "com.google.firebase:firebase-database:$play_services_version"
+    compile "com.google.firebase:firebase-storage:$play_services_version"
+    compile "com.kelvinapps:rxfirebase:0.0.15"
 
     //dagger
     compile 'com.google.dagger:dagger:2.7'
@@ -107,9 +111,9 @@ dependencies {
     compile 'com.vk:androidsdk:1.6.5'
 
     //play services
-    compile "com.google.android.gms:play-services-places:9.6.1"
-    compile "com.google.android.gms:play-services-maps:9.6.1"
-    compile 'com.google.android.gms:play-services-auth:9.6.1'
+    compile "com.google.android.gms:play-services-places:$play_services_version"
+    compile "com.google.android.gms:play-services-maps:$play_services_version"
+    compile "com.google.android.gms:play-services-auth:$play_services_version"
 
     //design
     compile 'com.github.rubensousa:BottomSheetBuilder:1.3'
@@ -126,7 +130,6 @@ dependencies {
     compile 'com.github.zellius:rxlocationmanager.kotlin:0.1.0'
     compile 'com.mlsdev.rximagepicker:library:1.3.1'
     compile 'com.rohit.recycleritemclicksupport:recycleritemclicksupport:1.0.1'
-    compile 'com.android.support:support-v4:24.2.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
